- Updated - Implement Configuration where ArrayAccess was removed + code cleanup
- Updated - Romanian local translations
- Updated - Query Pagination Numbers border to currentColor if button styles are having transparent border
- Updated - Query Comments Template and Pagination cleanup unnecessary methods after WP5.9 updates
- Updated - Gutenberg Editor Styles (cleanup)
- Fixed - ArrayAccess methods PHP 8 warnings (in class-config.php)
- Fixed - Issue with core/cover top-left content alignment
- Fixed - Issue with invalid starter content for About page
- Fixed - Issue with blockGap CSS generation due to being saved as array after Gutenberg plugin update (logical block margin based on writing mode)
- Fixed - Generate CSS for vertical blockGap (eg, Group block with multiple Columns)
- Fixed - core/spacer double output of units in generated CSS
- Fixed - core/spacer height issue with .vr class in navigation - on mobile
- Added - WooCommerce HTML starter templates
- Added - New Header/Footer template parts: Header Dark, Header Logo Left, Header with Search, Footer Dark (removed as patterns)
- Added - Author Box template
- Added - Default patterns as PHP files for Gutenberg 12.9.0 / Maintain HTML registration as well for backwards compat

v5.5.3/4
- Updated - Certain blocks logic to make use of custom palette colors along with default ones - previously was overwriting them
- Updated - Starter features.php to about.php + fixed a slug (for some reason it does not loads on WP.org)
- Updated - core/separator faded style width to 100% for backend overwrite
- Added - Home.html template

v5.5.2
- Updated - Header default pattern for WP.org directory

v5.5.1
- Updated - /views/ folder params inline documentation
- Updated - core/site-logo is-style-rounded CSS
- Updated - 404 page base design improvements + added big title and "Home" button
- Updated - Header columns adjustments and Navigation remove ID to allow usage of core/page-list fallback